--- a/modules/customer/index.html
+++ b/modules/customer/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../../styles/print.css" media="print">
   <script src="../../scripts/format.js"></script>
   <script src="../../scripts/toast.js"></script>
+  <script src="../../scripts/ui.js"></script>
   <script src="../../scripts/nav.js"></script>
   <script src="../../scripts/date.js"></script>
   <script src="../../scripts/storage.js"></script>
@@ -175,11 +176,34 @@
     };
     document.getElementById('delete').onclick = async ()=>{
       if(!id) return;
-      if(!confirm('Diesen Kunden löschen?')) return;
-      const next = getLocal().filter(x=>x.id!==id);
-      setLocal(next);
-      try{ await deleteCustomerFromCloud(id); }catch(e){ console.warn('Cloud delete failed', e); }
-      location.href = '../customers/index.html';
+      dfsUI.show({
+        title:'Kunden löschen',
+        text:'Der Kunde und seine Dokumente werden entfernt. Optional können verknüpfte Verträge ebenfalls gelöscht werden.',
+        checkText:'Ja, ich will diesen Kunden endgültig löschen.',
+        onOk: async ()=>{
+          try{
+            const filesMap = dfsStore.get('dfs.customerFiles', {});
+            const files = filesMap[id] || [];
+            for(const f of files){ try{ await dfsFiles.removeByPath(f.id); }catch(_){} }
+            delete filesMap[id]; dfsStore.set('dfs.customerFiles', filesMap);
+            const next = getLocal().filter(x=>x.id!==id); setLocal(next);
+            try{ await deleteCustomerFromCloud(id); }catch(e){ console.warn('Cloud delete failed', e); }
+            if(confirm('Auch verknüpfte Verträge dieses Kunden löschen?')){
+              let contracts = dfsStore.get('dfs.contracts', []);
+              const cfilesMap = dfsStore.get('dfs.contractFiles', {});
+              const toDelete = contracts.filter(v=> String(v.customerId||'')===String(id)).map(v=>v.id);
+              for(const cid of toDelete){
+                for(const f of (cfilesMap[cid]||[])){ try{ await dfsFiles.removeByPath(f.id); }catch(_){} }
+                delete cfilesMap[cid]; try{ await dfsCloud.delete('dfs.contracts', cid); }catch{}
+              }
+              dfsStore.set('dfs.contractFiles', cfilesMap);
+              contracts = contracts.filter(v=> String(v.customerId||'')!==String(id));
+              dfsStore.set('dfs.contracts', contracts);
+            }
+            location.href = '../customers/index.html';
+          }catch(e){ console.error(e); dfsToast('Löschen fehlgeschlagen','error'); }
+        }
+      });
     };
     (function(){
       function fmtMoney(n){
