--- a/index.html
+++ b/index.html
@@ -43,16 +43,13 @@
       </ul>
 
       <div style="margin-top:auto">
-        <small style="color:var(--muted)">Version <span id="ver">1.3.0</span> – Björn Weber</small>
+        <small style="color:var(--muted)">Cloud-only Mode – alle Daten werden automatisch gespeichert. · Version <span id="ver">1.3.0</span></small>
       </div>
     </aside>
 
     <main class="main">
       <div class="topbar">
-        <div style="display:flex;gap:8px;align-items:center">
-          <button class="btn" id="btn-save-cloud">In Cloud speichern</button>
-          <button class="btn outline" id="btn-load-cloud">Aus Cloud laden</button>
-        </div>
+        <div></div>
         <div>
           <button class="btn outline" onclick="window.print()">Als PDF speichern</button>
         </div>
@@ -102,8 +99,6 @@
 
   <!-- Shell-Logik -->
   <script type="module">
-    import { saveAllDFSBlobs, loadAllDFSBlobs } from './scripts/firebase.js';
-
     const iframe = document.getElementById('content');
     const links  = document.querySelectorAll('.sidebar-nav .nav-link');
 
@@ -129,30 +124,7 @@
       setTimeout(() => t.classList.remove('show'), 2000);
     };
 
-    // Cloud: speichert/lädt die drei Hauptblobs
-    document.getElementById('btn-save-cloud').addEventListener('click', async () => {
-      try {
-        const customers = JSON.parse(localStorage.getItem('dfs.customers') || 'null');
-        const contracts = JSON.parse(localStorage.getItem('dfs.contracts') || 'null');
-        const analysis  = JSON.parse(localStorage.getItem('dfs.analysis')  || 'null');
-        await saveAllDFSBlobs({ customers, contracts, analysis });
-        toast('In Cloud gespeichert');
-      } catch (e) {
-        console.error(e); toast('Fehler beim Speichern');
-      }
-    });
-
-    document.getElementById('btn-load-cloud').addEventListener('click', async () => {
-      try {
-        const { customers, contracts, analysis } = await loadAllDFSBlobs();
-        if (customers) localStorage.setItem('dfs.customers', JSON.stringify(customers));
-        if (contracts) localStorage.setItem('dfs.contracts', JSON.stringify(contracts));
-        if (analysis)  localStorage.setItem('dfs.analysis',  JSON.stringify(analysis));
-        toast('Aus Cloud geladen');
-      } catch (e) {
-        console.error(e); toast('Fehler beim Laden');
-      }
-    });
+    // keine Cloud-Buttons mehr – Cloud-only Mode
     // Standardseite markieren
     setActive('./modules/dashboard/index.html');
   </script>
